test/e2e/fixtures/regexrewrite-forwarding/queries.json
[
  {
    "url": "/regexrewrite-forwarding/bar",
    "method": "GET"
  },
  {
    "url": "/regexrewrite-forwarding/baz",
    "method": "GET"
  },
  {
    "url": "/xregexrewrite-forwarding/",
    "method": "GET"
  }
]
